--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "express-validator": "^7.0.1",
     "html-react-parser": "^5.1.10",
     "js-cookie": "^3.0.5",
