--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "express-validator": "^7.0.1",
     "html-react-parser": "^5.1.10",
     "js-cookie": "^3.0.5",
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
-    "sweetalert2": "^11.10.7",
+    "sweetalert2": "^11.10.8",
+    "sweetalert2-react-content": "^5.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
