--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.10.8",
     "sweetalert2-react-content": "^5.0.7",
     "zustand": "^4.5.2"
