--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "client",
   "private": true,
   "version": "0.0.0",
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
